# forgejo-guardian

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  rust-toolchain.toml  rustfmt.toml  sumi.toml
.forgejo/ISSUE_TEMPLATE/: bug.md  feature_request.md
.forgejo/workflows/: cd.yml  ci.yml
.github/workflows/: auto_close_pr.yml
docker/: Dockerfile  docker-compose.yml
locales/: ar-sa.toml  de-de.toml  en-us.toml  ru-ru.toml
src/: config.rs  error.rs  inactive_users.rs  lazy_purge.rs  main.rs  traits.rs  users_fetcher.rs  utils.rs
src/bots/: mod.rs
src/bots/matrix_bot/: database.rs  handlers.rs  matrix_api.rs  mod.rs  users_handler.rs  utils.rs
src/bots/telegram_bot/: callback_handler.rs  message_handler.rs  mod.rs  users_handler.rs
src/config/: boolean.rs  defaults.rs  deserializers.rs  locations.rs  mod.rs  parse_invalid.rs  utils.rs
src/db/: alerted_users.rs  events.rs  ignored_users.rs  lazy_purge.rs  mod.rs
src/forgejo_api/: activity_feed.rs  ban_user.rs  get_users.rs  heatmap.rs  mod.rs  tokens.rs  user.rs
src/telegram_bot/: callback_handler.rs  message_handler.rs  mod.rs  sus_handler.rs  users_handler.rs
