[package]
name        = "forgejo-guardian"
description = "Simple Forgejo instance guardian, banning users and alerting admins based on certain regular expressions"
version     = "0.1.0"
edition     = "2021"
authors     = ["Awiteb <a@4rs.nl>"]
repository  = "https://git.4rs.nl/awiteb/forgejo-guardian"
license     = "AGPL-3.0-or-later"


[dependencies]
serde              = { version = "1.0.214", features = ["derive"] }
serde_json         = "1.0.132"
toml               = "0.8.19"
tracing            = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror          = "2.0.2"
regex              = "1.11.1"

reqwest = { version = "0.12.9", default-features = false, features = [
  "charset",
  "http2",
  "rustls-tls",
] }
tokio-util = { version = "0.7.12", default-features = false }
tokio = { version = "1.41.1", default-features = false, features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "signal",
] }
url = { version = "2.5.3", default-features = false, features = ["serde"] }
