[package]
name        = "forgejo-guardian"
description = "Simple Forgejo instance guardian, banning users and alerting admins based on certain regular expressions"
version     = "0.6.0"
edition     = "2021"
authors     = ["Awiteb <a@4rs.nl>"]
repository  = "https://git.4rs.nl/awiteb/forgejo-guardian"
license     = "AGPL-3.0-or-later"


[dependencies]
easy-ext           = "1.0.2"
redb               = "2.4.0"
regex              = "1.11.1"
rust-i18n          = "3.1.3"
serde_json         = "1.0.139"
thiserror          = "2.0.11"
toml               = "0.8.20"
tracing            = "0.1.41"
tracing-subscriber = "0.3.19"

chrono = { version = "0.4.39", default-features = false, features = [
  "std",
  "now",
  "serde",
] }
matrix-sdk = { version = "0.10.0", default-features = false, features = [
  "rustls-tls",
] }
reqwest = { version = "0.12.12", default-features = false, features = [
  "charset",
  "http2",
  "rustls-tls",
] }
serde = { version = "1.0.218", features = ["derive"] }
teloxide = { version = "0.13.0", default-features = false, features = [
  "macros",
  "ctrlc_handler",
  "rustls",
] }
tokio = { version = "1.43.0", default-features = false, features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "signal",
] }
tokio-util = { version = "0.7.13", default-features = false }
url = { version = "2.5.4", default-features = false, features = ["serde"] }
